[workspace]
members = ["demonax-mapper-core", "cli"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rayon = "1"
indicatif = "0.17"
anyhow = "1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
