[package]
name = "demonax-mapper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "demonax-mapper"
path = "src/main.rs"

[dependencies]
demonax-mapper-core = { path = "../demonax-mapper-core" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
